syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.opentsdb.grpc";

package opentsdb;

//import "validate/validate.proto";
//import "validation.proto";

service OpenTSDBService {
	
	rpc S(ContentName) returns (Content) {}
	rpc GetAggregators(Empty) returns (AggregatorNames) {}
	rpc GetAnnotation(AnnotationRequest) returns (TSDBAnnotation) {}
	rpc CreateAnnotations(stream TSDBAnnotations) returns (stream CreateAnnotationResponse) {}
	rpc UpdateAnnotations(stream TSDBAnnotations) returns (stream UpdateAnnotationResponse) {}
	rpc DeleteAnnotations(TSDBAnnotation) returns (TSDBAnnotation) {}
	rpc BulkDeleteAnnotations(BulkAnnotationRequest) returns (BulkAnnotationResponse) {}
	rpc GetConfiguration(Empty) returns (KeyValues) {}
	rpc GetFilterMetas(Empty) returns (FilterMetas) {}
	rpc DropCaches(Empty) returns (Empty) {}
	rpc Put(PutDatapoints) returns (PutDatapointsResponse) {}	
	rpc Puts(stream PutDatapoints) returns (stream PutDatapointsResponse) {}
	
	
	rpc MetricsLookup(FQMetricQuery) returns (stream FQMetrics) {}
	
	rpc AssignUid(Assignment) returns (Uid) {}
	rpc AssignUids(stream Assignment) returns (stream Uid) {}

	rpc DeleteUid(Assignment) returns (Empty) {}
	rpc DeleteUids(stream Assignment) returns (stream Count) {}
	
	rpc RenameUid(Reassignment) returns (Empty) {}
	rpc RenameUids(stream Reassignment) returns (stream Count) {}
	
	rpc ExecuteQuery(DataPointQuery) returns (stream QueryResponse) {}
	
/*	
	rpc ExecuteQuery(Query) returns (QueryResponse) {}
	rpc ExecuteQueries(Query) returns (stream SubQueryResponse) {}
*/
	
	rpc ping(Ping) returns (Pong) {}
}

message Ping {
	string msg = 1;
	int64 sendTime = 2;
}

message Pong {
	string msg = 1;
	string host = 2;
	int64 sendElapsedTime = 3;
	int64 receiveTime = 4;
}

message HttpResponse {
	int32 code = 1;
	string phrase = 2;
}

message Count {
	int64 count = 1;
}

message Tsuid {
	string tsuidName = 1;
	bytes tsuidBytes = 2;
}

message TsuidBorS {
	oneof tsuid {
		string tsuidName = 1;
		bytes tsuidBytes = 2;
	}
}

message Tsuids {
	repeated Tsuid tsuids = 1;
}

message ContentName {
	string name = 1;
}

message AggregatorName {
	string name = 1;
}

message AggregatorNames {
	repeated AggregatorName aggregatorName = 1;
}

message Empty {
}

message Content {
	bytes content = 1;
}

message TSDBAnnotation {
	int64 startTime = 1;
	int64 endTime = 2;
	Tsuid tsuid = 3;
	string description = 4;
	string notes = 5;
	map<string, string> custom = 6;	
}

message TSDBAnnotations {
	bool details = 1;
	repeated TSDBAnnotation annotations = 2;
}

message AnnotationRequest {
	int64 startTime = 1;
	TsuidBorS tsuid  = 2;
}

message CreateAnnotationResponse {
	int64 success = 1;
	int64 failed = 2;
	bool finalResponse = 3;
	repeated CreateAnnotationError errors = 4;
}

message UpdateAnnotationResponse {
	int64 success = 1;
	int64 failed = 2;
	bool finalResponse = 3;
	repeated UpdateAnnotationError errors = 4;
}




message CreateAnnotationError {
	string error = 1;
	TSDBAnnotation annotation = 2;
}

message UpdateAnnotationError {
	string error = 1;
	TSDBAnnotation annotation = 2;
}

message RelativeTime {
	int64 time = 1;
	string unit = 2; 
}

message DateTime {
	oneof TimeRange {
		RelativeTime relTime = 1;
		int64 unitTime = 2;
		string absTime = 3;
	}
}

message BulkAnnotationRequest {
	DateTime startTime = 1;
	DateTime endTime = 2;
	Tsuids tsuids = 3;
	bool global = 4;	
}

message BulkAnnotationResponse {
	Tsuids tsuids = 1;
	bool global = 2;
	int64 startTime = 3;
	int64 endTime = 4;
	int64 total = 5;			
}

message KeyValue {
	string key = 1;
	string value = 2;	
}

message KeyValues {
	repeated KeyValue keyValues = 1;
}

message FilterMeta {
	string name = 1;
	string examples = 2;
	string description = 3;
}

message FilterMetas {
	map<string, FilterMeta> filters = 1;
}

message MetricTags {
	map<string, string> tags = 1;
}

message FQMetric {
	string metric = 1;
	map<string, string> tags = 2;
	Tsuid tsuid = 3;
}

message FQMetrics {
	repeated FQMetric fqmetrics = 1; 
}

message FQMetricQuery {
	string expression = 1;
	bool includeTsuids = 2;
	int32 maxValues = 3;
}



message DataPoint {
	string metric = 1;
	MetricTags metricTags = 2;
	int64 timestamp = 3;
	double value = 4;
	Aggregation aggregation = 5;
}

message DataPoints {
	repeated DataPoint datapoints = 1;
}

message TXTime {
	int64 txtime = 1;  // Inbound: send time, Outbound: same
	int64 stime = 2; 	// Outbound: send elapased
	int64 rtime = 3;  // Outbound: return time
	int64 ptime = 4;	// Outbound: processing elapsed
}

message PutDatapoints {
	TXTime txTime = 1;
	bool details = 2;
	repeated DataPoint dataPoints = 3;
}

message PutDatapointError {
	string error = 1;
	DataPoint dataPoint = 2;
}

message PutDatapointsResponse {
	int64 success = 1;
	int64 failed = 2;
	bool finalResponse = 3;
	repeated PutDatapointError errors = 4;
	TXTime txTime = 5;
}



enum Aggregator {
	SUM = 0;
	PFSUM = 1;
	MIN = 2;
	MAX = 3;
	AVG = 4;
	MEDIAN = 5;
	NONE = 6;
	MULTIPLY = 7;
	DEV = 8;
	ZIMSUM = 9;
	MIMMIN = 10;
	MIMMAX = 11;
	COUNT = 12;
	FIRST = 13;
	LAST = 14;
	p999 = 15;
	p99 = 16;
	p95 = 17;
	p90 = 18;
	p75 = 19;
	p50 = 20;
	ep999r3 = 21;
	ep99r3 = 22;
	ep95r3 = 23;
	ep90r3 = 24;
	ep75r3 = 25;
	ep50r3 = 26;
	ep999r7 = 27;
	ep99r7 = 28;
	ep95r7 = 29;
	ep90r7 = 30;
	ep75r7 = 31;
	ep50r7 = 32;
}

enum FillPolicy {
	none = 0;
	NAN = 1;
	NULL = 2;
	zero = 3;
	scalar = 4;
}

enum UidType {
	metric = 0;
	tagk = 1;
	tagv = 2;
}

message Assignment {
	UidType type = 1;
	string name = 2;
}

message Reassignment {
	UidType type = 1;
	string oldName = 2;
	string newName = 3;
}

message Uid {
	UidType type = 1;
	string name = 2;
	bytes uidBytes = 3;
}

message Aggregation {
	bool groupBy = 1;
	RelativeTime interval = 2;
	Aggregator rollup = 3;
	Aggregator grouping = 4;	 	
}

message RateOptions {
	bool rate = 1;
	bool counter = 2;
	int64 counterMax = 3;
	int64 resetValue = 4;
	bool dropResets = 5;
}

message Downsample {
	RelativeTime relTime = 1;
	Aggregator aggregator = 2;
	FillPolicy fillPolicy = 3;
}

message Percentiles {
	repeated double percentile = 1;
}

enum FilterType {
	iliteral_or = 0;
	wildcard = 1;
	not_literal_or = 2;
	not_iliteral_or = 3;
	not_key = 4;
	iwildcard = 5;
	literal_or = 6;
	regexp = 8;
}

message Filter {
	FilterType filterType = 1;
	string tagk = 2;
	string filterExpression = 3;
	bool groupBy = 4;
}

message Filters {
	repeated Filter filters = 1;
}




message SubQueries {
	repeated SubQuery queries = 1;
}

enum StatsSection {
	GLOBAL = 0;
	QUERY = 1;
	SCANNER = 2;
}

message StatsValue {
	string key = 1;
	oneof value {
		double dvalue = 2;
		string svalue = 3;
	}
}

message StatsValues {
	repeated StatsValue statsValues = 1;
}

message StatsLevel {
	string key = 1;
	StatsValues values = 2;
}



message StatsMap {
	oneof rstats {
		StatsValues stats = 1;
		StatsLevel level = 2;
	}
}

message StatsMaps {
	repeated StatsMap stats = 1;
}

message DataPointQuery {
	DateTime startTime = 1;
	DateTime endTime = 2;
	oneof metrics {
		MetricAndTags metricAndTags = 3;
		Tsuids tsuids = 4;
	}			
	Aggregator aggregator = 5;
	bool rate = 6;
	RateOptions rateOptions = 7;
	Downsample downSample = 8;
}

message MetricAndTags {
	string metric = 1;
	MetricTags tags = 2;
}

message SubQuery {
	Aggregator aggregator = 1;
	oneof metrics {
		MetricTags metricTags = 2;
		Tsuids tsuids = 3;
	}		
	RateOptions rateOptions = 4;
	Downsample downSample = 5;
	Filters filters = 6;
	Percentiles percentiles = 7;		
}

message DPoint {
	double value = 1;
	int64 timestamp = 2;
}

message QueryResponse {  // Represents a net.opentsdb.core.DataPoints[]
	repeated string aggregatedTags = 1;
	TSDBAnnotations annotations = 2;
	int32 queryIndex = 3;
	string metric = 4;
	MetricTags tags = 5;
	Tsuids tsuids = 6;
	repeated DPoint dataPoints = 7;
	int32 totalDataPoints = 8;
}



// String metric, Map<String,String> tags, Aggregator function, boolean rate

/*
message Query {
	DateTime startTime = 1;
	DateTime endTime = 2;
	SubQueries queries = 3;
	bool noAnnotations = 4;
	bool globalAnnotations = 5;
	bool msResolution = 6;
	bool showTsuids = 7;
	bool showSummary = 8;
	bool showStats = 9;
	bool showQuery = 10;
	bool delete = 11;
	string timezone = 12;
	bool useCalendar = 13;
}

message SubQueryResponse {
	MetricTags metricTags = 1;
	repeated string aggregatedTags = 2;
	Tsuids tsuids = 3;
	map<int64, double> dps = 4;
	repeated TSDBAnnotation annotations = 5;
	repeated TSDBAnnotation globalAnnotations = 6;
	SubQuery subQuery = 7;	
}

message QueryResponse {
	repeated SubQueryResponse resonses = 1;
	map<string, double> statsSummary = 2;
}
*/








